--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,12 @@
             <version>${user-agent-utils.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
